--- a/updater_config.toml
+++ b/updater_config.toml
@@ -5,10 +5,11 @@ root = "/home/al/01_personal_docs/EDETEK/repos/"
 # 5.8.19a or "" for autodetect
 version = ""
 branch = "dev-59"
+release_branch = "5.9_RELEASE"
 
 [repos]
 node_workers = [
-  'conform5-bpo-api',
+  # 'conform5-bpo-api',
   # 'conform5-bxp-api',
   # 'conform5-dvw-api',
   # 'conform5-lambda-batch-audit',
@@ -16,7 +17,7 @@ node_workers = [
   # 'conform5-lambda-batch-define-xml-validator',
   # 'conform5-lambda-batch-issue-load-worker',
   # 'conform5-lambda-batch-issues-report-generator',
-  # 'conform5-lambda-batch-load-worker',
+  'conform5-lambda-batch-load-worker',
   # 'conform5-lambda-batch-parsing-worker',
   # 'conform5-lambda-batch-sdtm-validation',
   # 'conform5-lambda-batch-standard-merger',
