--- a/updater_config.toml
+++ b/updater_config.toml
@@ -1,33 +1,33 @@
 root = "/home/al/01_personal_docs/EDETEK/repos/"
+dry_run = true  # true | false
 
 # version that should be set to the package on specific branch
 [git]
-# 5.8.19a or "" for autodetect
-version = ""
-branch = "dev-59"
-release_branch = "5.9_RELEASE"
+version = "" # 5.8.19a or "" for autodetect
+branch = "dev-59"  # "dev-59" | "next"
+release_branch = "5.9_RELEASE"  # "5.9_RELEASE" | "5.8_RELEASE"
 
 [repos]
 node_workers = [
-  # 'conform5-bpo-api',
-  # 'conform5-bxp-api',
-  # 'conform5-dvw-api',
-  # 'conform5-lambda-batch-audit',
-  # 'conform5-lambda-batch-data-validation-worker',
-  # 'conform5-lambda-batch-define-xml-validator',
-  # 'conform5-lambda-batch-issue-load-worker',
-  # 'conform5-lambda-batch-issues-report-generator',
-  # 'conform5-lambda-batch-load-worker',
-  # 'conform5-lambda-batch-parsing-worker',
-  # 'conform5-lambda-batch-sdtm-validation',
-  # 'conform5-lambda-batch-standard-merger',
+  'conform5-bpo-api',
+  'conform5-bxp-api',
+  'conform5-dvw-api',
+  'conform5-lambda-batch-audit',
+  'conform5-lambda-batch-data-validation-worker',
+  'conform5-lambda-batch-define-xml-validator',
+  'conform5-lambda-batch-issue-load-worker',
+  'conform5-lambda-batch-issues-report-generator',
+  'conform5-lambda-batch-load-worker',
+  'conform5-lambda-batch-parsing-worker',
+  'conform5-lambda-batch-sdtm-validation',
+  'conform5-lambda-batch-standard-merger',
   'conform5-cb-rule-templates',
-  # 'conform5-lambda-batch-transformation-worker',
+  'conform5-lambda-batch-transformation-worker',
 ]
 
 python_workers = [
-  # 'conform5-lambda-batch-vr-python-custom-code',
-  # 'conform5-lambda-batch-mt-python-custom-code',
+  'conform5-lambda-batch-vr-python-custom-code',
+  'conform5-lambda-batch-mt-python-custom-code',
 ]
 
 
