--- a/updater_config.toml
+++ b/updater_config.toml
@@ -1,5 +1,5 @@
 root = "/home/al/01_personal_docs/EDETEK/repos/"
-version_update_required = true  # true | false
+version_update_required = false  # true | false
 repo_rebuild_required = true  # true | false
 
 # version that should be set to the package on specific branch
@@ -7,6 +7,10 @@ repo_rebuild_required = true  # true | false
 version = "" # 5.8.19a or "" for autodetect
 branch = "dev-59"  # "dev-59" | "next"
 release_branch = "5.9_RELEASE"  # "5.9_RELEASE" | "5.8_RELEASE"
+
+[aws]
+role_script_path="/home/al/01_personal_docs/EDETEK/script/sso.zsh"
+role="conform5-edetek-dev-01.conform5-batch-dev"
 
 [repos]
 node_workers = [
@@ -22,9 +26,9 @@ node_workers = [
   # 'conform5-lambda-batch-parsing-worker',
   # 'conform5-lambda-batch-sdtm-validation',
   # 'conform5-lambda-batch-standard-merger',
-  'conform5-cb-rule-templates',
+  # 'conform5-cb-rule-templates',
   # 'conform5-lambda-batch-transformation-worker',
-  # 'conform5-batch-initiator-user-id-population',
+  'conform5-batch-initiator-user-id-population',
 ]
 
 python_workers = [
