--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ toml = "0.8.8"
 serde = "1.0.136"
 serde_derive = "1.0.136"
 serde_json = "1.0.68"
+clap = { version = "4.5.1", features = ["derive"] }
