--- a/example.config.toml
+++ b/example.config.toml
@@ -1,6 +1,7 @@
 root = "path/to/root/for/repos"
 version_update_required = false  # true | false
 repo_rebuild_required = false  # true | false
+process_only_updated_repo = true  # true | false
 
 # version that should be set to the package on specific branch
 [git]
