--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde = "1.0.136"
 serde_derive = "1.0.136"
 serde_json = "1.0.68"
 clap = { version = "4.5.1", features = ["derive"] }
+log = "0.4.21"
+env_logger = "0.11.3"
