--- a/example.config.toml
+++ b/example.config.toml
@@ -3,6 +3,9 @@ version_update_required = false  # true | false
 repo_rebuild_required = false  # true | false
 process_only_updated_repo = true  # true | false
 
+[logger]
+log_level = "Warn" # Debug | Info | Warn | Error
+
 # version that should be set to the package on specific branch
 [git]
 version = "5.9.25" # 5.8.19a or comment for autodetect
