--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ serde_json = "1.0.68"
 clap = { version = "4.5.1", features = ["derive"] }
 log = "0.4.21"
 env_logger = "0.11.3"
+dirs = "5.0"
+chrono = { version = "0.4", features = ["serde"] }
+glob = "0.3"
